v1.7.22 (28/10/2020)
- cosmetic changes to deposition interface

v1.7.21 (19/10/2020)
- bug fix: use default CCP4 for giant.merge_conformations

v1.7.20 (16/10/2020)
- bug fix: remove undocumented and faulty changes to RunQuickRefine

v1.7.19 (12/10/2020)
- bug fix: use 'module load ccp4/7.0.072' for pandda.analyse, but 'module load ccp4' (i.e. v7.1) for pre-run ground-state selection at DLS

v1.7.18 (12/10/2020)
- bug fix: added missing 'module load ccp4' statement when generating pandda.analyse shell script at DLS

v1.7.17 (09/10/2020)
- bug fix: corrected positions of ignore checkboxes in pandda.analyse

v1.7.16 (08/10/2020)
- enable export of selected datasets with pandda.export
- glitch fix: remove hydrogens before saving model for buster refinement (causes problems during ligand occupancy refinement)
- XChemRefine: removed "-q medium.q" option for non-DLS refinement
- added helper script to which reverts to last successful non-pandda refinement
- XChemCoot (pandda refinement): reading of (2)fofc.maps disabled because Coot 0.9 does not handle P1 maps well
- pandda.analyse: stopped sourcing obsolete pandda v0.2.12 at DLS

v1.7.15 (25/09/2020)
- added option to ignore GELLY sanity check in BUSTER
- added option to ignore GELLY sanity check during pandda export with BUSTER

v1.7.14 (24/09/2020)
- added option for ligand occupancy refinement in BUSTER
- XChemCootBuster: reading of (2)fofc.maps disabled because Coot 0.9 does not handle P1 maps well

v1.7.13 (23/09/2020)
- bug fix: use wavelength read from (.free).mtz during model MMCIF preparation when updating SF MMCIF

v1.7.12 (14/09/2020)
- bug fix: problem with recognizing AIMLESS logfiles during preparation of MMCIF files
- bug fix: try finding experimental wavelength from .free.mtz file if it is 0.0 in refine.mtz during MMCIF file preparation
- preparation of mmcif files: catch and report missing event mtz files

v1.7.11 (09/09/2020)